feat: add refresh tokens and auth roles